hphp/hack/test/typecheck/new_inference/prop_access_lambda_nullsafe.php.exp
ERROR: File "prop_access_lambda_nullsafe.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
  File "prop_access_lambda_nullsafe.php", line 9, characters 23-28:
  Expected `string`
  File "prop_access_lambda_nullsafe.php", line 5, characters 38-40:
  But got `int`
